--- a/view/article.ejs
+++ b/view/article.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//unpkg.com/purecss@1.0.0/build/base-min.css">
+    <link rel="stylesheet" href="/data/assets/base-min.css">
     <style>
         .source {
             display: none
@@ -25,8 +25,8 @@
         </div>
     </div>
 </body>
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="/data/assets/jquery.min.js"></script>
+<script src="/data/assets/marked.min.js"></script>
 <script>
     $('.content').html(marked($('.source').html()));
 </script>
