--- a/view/site.ejs
+++ b/view/site.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//unpkg.com/purecss@1.0.0/build/base-min.css">
+    <link rel="stylesheet" href="/data/assets/base-min.css">
 </head>
 
 <body>
